--- a/slides/packages.tex
+++ b/slides/packages.tex
@@ -3,3 +3,5 @@
 \usepackage[ruled,vlined]{algorithm2e}
 \usepackage{dirtree}
 \usepackage{pdfpc}
+\usepackage{pgfplots}
+\usetikzlibrary{positioning}
